# shadowing-record

./: README.md
backend/: .gitignore  Cargo.toml  record.sql
backend/migrations/: 20240211121912_init.sql
backend/src/: lib.rs  main.rs
backend/src/common/: api_response.rs  custom_error.rs  mod.rs
backend/src/db/: connection.rs
backend/src/handlers/: audio.rs
backend/src/routes/: audio.rs
frontend/: .gitignore  Makefile  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  process.d.ts  tailwind.config.ts
frontend/public/: recorder-processor.js
frontend/src/: middleware.ts  routes.ts
frontend/src/api/: http.ts  s3.ts
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/components/: _audio-button-group.tsx  _record-button-group.tsx  waveform.tsx
frontend/src/data/: user.ts
frontend/src/db/: drizzle.ts  record.ts  schema.ts  user.ts
frontend/src/drizzle/: 0000_oval_hobgoblin.sql  0000_wandering_adam_destine.sql  0001_spooky_jetstream.sql  0001_thin_praxagora.sql  0002_aromatic_masque.sql  0004_productive_frank_castle.sql  0005_spotty_korg.sql
frontend/src/hooks/: recorder-processor.js  useAudioKit.tsx  useAudioWaveform.tsx  useCountSec.tsx  useElapsedTime.tsx  useRecordMedia.tsx  useToggleSidebar.tsx  useWavePlayer.tsx
frontend/src/layout/: Header.tsx  toggle-theme.tsx
frontend/src/lib/: auth.config.ts  auth.ts  constants.ts  db.ts  utils.ts
frontend/src/provider/: queryProvider.tsx
frontend/src/schema/: item-params.ts  login.ts  records.ts
frontend/src/script/: migrate.ts  seed.ts
(+69 files in other folders)
