[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4" # Check for the latest version
tokio = { version = "1.3.6", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] } # Use the appropriate features for your databas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
