[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4", features= ["multipart"]} # Check for the latest version
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.3.6", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] } # Use the appropriate features for your databas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.79"
tokio-util = "0.7.10"
tower-http = {version = "0.5.1", features = ['cors']}

